--- a/index.html
+++ b/index.html
@@ -4,10 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Новый сайт
+    <div class="banner" id="main">
+        <div class="container">
+            <div class="header">
+                <div class="container container_header">
+                    <div class="logo">
+                        <div class="logo_upper">
+                            Adlet
+                        </div>
+                            
+                        <div class="logo_downer">
+                            krasavchik
+                        </div>
+                    </div>
 
-    Ещаа фцв фц
+                    <div class="nav">
+                        <a class="nav_item" href="#main"><div >Главное</div></a>
+                        <a class="nav_item" href=""><div>Контакты</div></a>
+                        <a class="nav_item" href="#zad"><div>Зад</div></a>
+                        <a class="nav_item" href=""><div>Жопа</div></a>
+                        <a class="nav_item" href=""><div>НеГлавное</div></a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner_title">Адлет вас <br>приветствует!</div>
+        </div>
+    </div>
+
+    <div class="maincontent" id="zad">
+        <div class="container">
+            <div class="info">
+                <div class="icon">
+                    <div class="icon_photo"><img src="./bench.svg"></div>
+                    <div class="icon_words">Место где сидел <br> Адлет</div>
+                </div>
+                <div class="icon">
+                    <div class="icon_photo"><img src="./bicycle.svg"></div>
+                    <div class="icon_words">Велосипед который украл <br> Адлет</div>
+                </div>
+                <div class="icon">
+                    <div class="icon_photo"><img src="./building.svg"></div>
+                    <div class="icon_words">Там где лежит украденный <br> Велосипед</div>
+                </div>
+                <div class="icon">
+                    <div class="icon_photo"><img src="./fountain.svg"></div>
+                    <div class="icon_words">Место где купался <br> Адлет</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <div class="container">
+            <div class="gallery_title">Адлета Квартиры</div>
+            <div class="gallery_photo">
+                <div class="photo_row"><img class="gallery_icon" src="./App1.jpg"><img class="gallery_icon" src="./App4.jpg"></div>
+                <div class="photo_row"><img class="gallery_icon" src="./App3.jpg"><img class="gallery_icon" src="./App2.jpg"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
