--- a/index.html
+++ b/index.html
@@ -67,5 +67,34 @@
             </div>
         </div>
     </div>
+
+    <div class="contact">
+        <div class="container container_contact">
+            <div class="contact_info">
+                <div class="contact_title">Хотите записаться к Адлету ?</div>
+                <div class="contact_text">Он занимается этим уже не первый год</div>
+            </div>
+            <form action="https://formspree.io/xaypkgrn" method="POST" class="form">
+                <div class="form_item">
+                    <label class="form_label" for="">
+                        <input type="text" placeholder="Ваше имя" name="name" required>
+                    </label>
+                    <label class="form_label" for="">
+                        <input type="tel" placeholder="Ваш телефон"  name="tel" required>
+                    </label>
+                </div>
+                <div class="form_item">
+                    <p class="form_text">
+                        *Мы никому не передаем ваши данные. <br>
+                        И не сохраняем ваш номер в базу.
+                    </p>
+                    <button class="btn"  type="submit" value="Send">
+                        Отправить
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
