--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="./hamburger.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -96,5 +97,22 @@
         </div>
     </div>
 
+    <div class="nav_banner">
+        <div class="nav_menu">
+            <a class="navmob_item" href="#main"><div >Главное</div></a>
+            <a class="navmob_item" href=""><div>Контакты</div></a>
+            <a class="navmob_item" href="#zad"><div>Зад</div></a>
+            <a class="navmob_item" href=""><div>Жопа</div></a>
+            <a class="navmob_item" href=""><div>НеГлавное</div></a>
+        </div>
+    </div>
+
+    <button class="hamburger hamburger--collapse" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+
+    <script src="main.js"></script>
 </body>
 </html>
