--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
         </span>
       </button>
 
+      <div class="footer">
+          <div class="container">
+              <p class="address">Адлетова, 777</p>
+              <p class="number">+7 (707) 694 71 83</p>
+              <p class="time">10:00 - 20:00</p>
+              <p class="e-mail">adletgabdykalik@gmail.com</p>
+              <div class="social">
+                  <a href="https://www.instagram.com/beautysalon.asem/"><img src="./instagram.svg"></a>
+                  <a href="https://www.facebook.com/adlet.gabd"><img src="./facebook-logo.svg"></a>
+              </div>
+          </div>
+      </div>
+
     <script src="main.js"></script>
 </body>
 </html>
