--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
                     <div class="nav">
                         <a class="nav_item" href="#main"><div >Главное</div></a>
-                        <a class="nav_item" href=""><div>О нас</div></a>
-                        <a class="nav_item" href="#zad"><div>Пакеты услуг</div></a>
+                        <a class="nav_item" href="#about_menu"><div>О нас</div></a>
+                        <a class="nav_item" href=""><div>Пакеты услуг</div></a>
                         <a class="nav_item" href=""><div>Контакты</div></a>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
     <div class="nav_banner">
         <div class="nav_menu">
             <a class="navmob_item" href="#main"><div>Главное</div></a>
-            <a class="navmob_item" href=""><div>О нас</div></a>
+            <a class="navmob_item" href="#about_menu"><div>О нас</div></a>
             <a class="navmob_item" href="#zad"><div>Пакеты услуг</div></a>
             <a class="navmob_item" href=""><div>Контакты</div></a>
         </div>
@@ -67,7 +67,7 @@
       </button>
 
 
-      <div class="about">
+      <div class="about" id="#about_menu">
         <div class="container_about">
             <div class="about_header_upper">
                 О нас
@@ -90,20 +90,38 @@
                 <img class="facebook_logo" src="./Creative_Strategy_Professional.png" alt="">
             </div>
         </div>
+        <div class="comanda">Команда NOM Agency</div>
+
     </div>
+    </div>
+
+    <div class="packet">
+        <div class="container">
+            <div class="packet_header">
+                Пакеты Услуг
+            </div>
+        </div>
+    </div>
+
+    <div class="NOM_contact">
+        <div class="container">
+        <div class="NOM_contact_header">
+            Контакты
+        </div>
+        </div>
     </div>
 
 
 
       <div class="footer">
           <div class="container">
-              <p class="address">Адлетова, 777</p>
-              <p class="number">+7 (707) 694 71 83</p>
-              <p class="time">10:00 - 20:00</p>
-              <p class="e-mail">adletgabdykalik@gmail.com</p>
+              <p class="address">Copyright © 2020 NOM Agency, All Rights Reserved</p>
+              <p class="number">Privacy Policy</p>
+              <p class="time">Berlin, Germany</p>
+              <p class="e-mail">nom_agency@yahoo.com<p>
               <div class="social">
-                  <a href="https://www.instagram.com/beautysalon.asem/"><img src="./instagram.svg"></a>
-                  <a href="https://www.facebook.com/adlet.gabd"><img src="./facebook-logo.svg"></a>
+                  <a href="https://www.instagram.com/nom_agency/"><img src="./instagram.svg"></a>
+                  <a href="https://www.facebook.com/nomagencyglobal"><img src="./facebook-logo.svg"></a>
               </div>
           </div>
       </div>
