--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="./hamburger.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
 </head>
 <body>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <div class="banner" id="main">
         <div class="container">
             <div class="header">
@@ -23,8 +25,8 @@
                     <div class="nav">
                         <a class="nav_item" href="#main"><div >Главное</div></a>
                         <a class="nav_item" href="#about_menu"><div>О нас</div></a>
-                        <a class="nav_item" href=""><div>Пакеты услуг</div></a>
-                        <a class="nav_item" href=""><div>Контакты</div></a>
+                        <a class="nav_item" href="#packet_menu"><div>Пакеты услуг</div></a>
+                        <a class="nav_item" href=""><div>SMM</div></a>
                     </div>
                 </div>
             </div>
@@ -54,9 +56,9 @@
     <div class="nav_banner">
         <div class="nav_menu">
             <a class="navmob_item" href="#main"><div>Главное</div></a>
-            <a class="navmob_item" href="#about_menu"><div>О нас</div></a>
-            <a class="navmob_item" href="#zad"><div>Пакеты услуг</div></a>
-            <a class="navmob_item" href=""><div>Контакты</div></a>
+            <a class="navmob_item" href="about_menu"><div>О нас</div></a>
+            <a class="navmob_item" href="#packet_menu"><div>Пакеты услуг</div></a>
+            <a class="navmob_item" href=""><div>SMM</div></a>
         </div>
     </div>
 
@@ -67,9 +69,9 @@
       </button>
 
 
-      <div class="about" id="#about_menu">
+      <div class="about" >
         <div class="container_about">
-            <div class="about_header_upper">
+            <div class="about_header_upper" id="about_menu">
                 О нас
             </div>
             <div class="about_header_downer">
@@ -95,10 +97,66 @@
     </div>
     </div>
 
-    <div class="packet">
-        <div class="container">
+    <div class="packet" id="packet_menu" >
+        <div class="container" >
             <div class="packet_header">
                 Пакеты Услуг
+            </div>
+            <div class="carousel">
+                <div class="container_carousel">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./Standard.png" class="d-block w-100 carousel_image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>First slide label</h5>
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./Klassich.png" class="d-block w-100 carousel_image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./Totaler.png" class="d-block w-100 carousel_image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./Lernen und Hilfe.png" class="d-block w-100 carousel_image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Fourth slide label</h5>
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./Website-Entwicklung.png" class="d-block w-100 carousel_image" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Fifth slide label</h5>
+                          <p></p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+              </div>
             </div>
         </div>
     </div>
@@ -106,12 +164,10 @@
     <div class="NOM_contact">
         <div class="container">
         <div class="NOM_contact_header">
-            Контакты
+            SMM
         </div>
         </div>
     </div>
-
-
 
       <div class="footer">
           <div class="container">
@@ -126,6 +182,9 @@
           </div>
       </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
